// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BottomSheet card Renders BottomSheetCard 1`] = `
<Memo(BottomSheetView)
  style={
    {
      "flexDirection": "row",
      "height": 45,
    }
  }
>
  <TouchableOpacity
    onPress={[MockFunction]}
    style={
      {
        "borderColor": "#eeeeee",
        "borderWidth": 1,
        "flexDirection": "row",
        "width": 750,
      }
    }
  >
    <Memo(BottomSheetView)
      style={
        {
          "flex": 1,
          "justifyContent": "center",
        }
      }
    >
      <Text
        style={
          {
            "fontSize": 16,
            "paddingLeft": 20,
          }
        }
      >
        Test
      </Text>
    </Memo(BottomSheetView)>
  </TouchableOpacity>
</Memo(BottomSheetView)>
`;

exports[`Picking Tab Navigator Renders the Pick TabNavigator 1`] = `
<MaterialTopTabNavigator
  initialRouteName="Pick"
  screenListeners={
    {
      "beforeRemove": [Function],
      "tabPress": [Function],
    }
  }
  screenOptions={
    {
      "swipeEnabled": true,
      "tabBarActiveTintColor": "#0071e9",
      "tabBarInactiveTintColor": "#616161",
      "tabBarItemStyle": {
        "borderColor": "#9e9e9e",
        "borderEndWidth": 0.5,
      },
    }
  }
>
  <Screen
    listeners={
      {
        "focus": [Function],
      }
    }
    name="QuickPick"
    options={
      {
        "tabBarBadge": undefined,
        "title": "[missing "en.PICKING.QUICKPICK" translation]",
      }
    }
  >
    [Function]
  </Screen>
  <Screen
    listeners={
      {
        "beforeRemove": [Function],
        "focus": [Function],
      }
    }
    name="Pick"
    options={
      {
        "tabBarBadge": undefined,
        "title": "[missing "en.PICKING.PICK" translation]",
      }
    }
  >
    [Function]
  </Screen>
  <Screen
    listeners={
      {
        "focus": [Function],
      }
    }
    name="SalesFloor"
    options={
      {
        "tabBarBadge": undefined,
        "title": "[missing "en.ITEM.SALES_FLOOR_QTY" translation]",
      }
    }
  >
    [Function]
  </Screen>
</MaterialTopTabNavigator>
`;

exports[`Picking Tab Navigator Renders the Pick TabNavigator with "swipeEnabled: false" if multi Bin/Pick is enabled 1`] = `
<MaterialTopTabNavigator
  initialRouteName="Pick"
  screenListeners={
    {
      "beforeRemove": [Function],
      "tabPress": [Function],
    }
  }
  screenOptions={
    {
      "swipeEnabled": false,
      "tabBarActiveTintColor": "#0071e9",
      "tabBarInactiveTintColor": "#616161",
      "tabBarItemStyle": {
        "borderColor": "#9e9e9e",
        "borderEndWidth": 0.5,
      },
    }
  }
>
  <Screen
    listeners={
      {
        "focus": [Function],
      }
    }
    name="QuickPick"
    options={
      {
        "tabBarBadge": undefined,
        "title": "[missing "en.PICKING.QUICKPICK" translation]",
      }
    }
  >
    [Function]
  </Screen>
  <Screen
    listeners={
      {
        "beforeRemove": [Function],
        "focus": [Function],
      }
    }
    name="Pick"
    options={
      {
        "tabBarBadge": undefined,
        "title": "[missing "en.PICKING.PICK" translation]",
      }
    }
  >
    [Function]
  </Screen>
  <Screen
    listeners={
      {
        "focus": [Function],
      }
    }
    name="SalesFloor"
    options={
      {
        "tabBarBadge": undefined,
        "title": "[missing "en.ITEM.SALES_FLOOR_QTY" translation]",
      }
    }
  >
    [Function]
  </Screen>
</MaterialTopTabNavigator>
`;

exports[`Picking Tab Navigator Renders the Pick TabNavigator with Active Picks 1`] = `
<MaterialTopTabNavigator
  initialRouteName="Pick"
  screenListeners={
    {
      "beforeRemove": [Function],
      "tabPress": [Function],
    }
  }
  screenOptions={
    {
      "swipeEnabled": true,
      "tabBarActiveTintColor": "#0071e9",
      "tabBarInactiveTintColor": "#616161",
      "tabBarItemStyle": {
        "borderColor": "#9e9e9e",
        "borderEndWidth": 0.5,
      },
    }
  }
>
  <Screen
    listeners={
      {
        "focus": [Function],
      }
    }
    name="QuickPick"
    options={
      {
        "tabBarBadge": undefined,
        "title": "[missing "en.PICKING.QUICKPICK" translation]",
      }
    }
  >
    [Function]
  </Screen>
  <Screen
    listeners={
      {
        "beforeRemove": [Function],
        "focus": [Function],
      }
    }
    name="Pick"
    options={
      {
        "tabBarBadge": [Function],
        "title": "[missing "en.PICKING.PICK" translation]",
      }
    }
  >
    [Function]
  </Screen>
  <Screen
    listeners={
      {
        "focus": [Function],
      }
    }
    name="SalesFloor"
    options={
      {
        "tabBarBadge": undefined,
        "title": "[missing "en.ITEM.SALES_FLOOR_QTY" translation]",
      }
    }
  >
    [Function]
  </Screen>
</MaterialTopTabNavigator>
`;

exports[`Picking Tab Navigator Renders the Pick TabNavigator with Active Picks and multi bin selection enabled 1`] = `
<MaterialTopTabNavigator
  initialRouteName="Pick"
  screenListeners={
    {
      "beforeRemove": [Function],
      "tabPress": [Function],
    }
  }
  screenOptions={
    {
      "swipeEnabled": false,
      "tabBarActiveTintColor": "#0071e9",
      "tabBarInactiveTintColor": "#616161",
      "tabBarItemStyle": {
        "borderColor": "#9e9e9e",
        "borderEndWidth": 0.5,
      },
    }
  }
>
  <Screen
    listeners={
      {
        "focus": [Function],
      }
    }
    name="QuickPick"
    options={
      {
        "tabBarBadge": undefined,
        "title": "[missing "en.PICKING.QUICKPICK" translation]",
      }
    }
  >
    [Function]
  </Screen>
  <Screen
    listeners={
      {
        "beforeRemove": [Function],
        "focus": [Function],
      }
    }
    name="Pick"
    options={
      {
        "tabBarBadge": [Function],
        "title": "[missing "en.PICKING.PICK" translation]",
      }
    }
  >
    [Function]
  </Screen>
  <Screen
    listeners={
      {
        "focus": [Function],
      }
    }
    name="SalesFloor"
    options={
      {
        "tabBarBadge": undefined,
        "title": "[missing "en.ITEM.SALES_FLOOR_QTY" translation]",
      }
    }
  >
    [Function]
  </Screen>
</MaterialTopTabNavigator>
`;

exports[`Picking Tab Navigator Renders the Pick TabNavigator with Active Picks and multi pick selection enabled 1`] = `
<MaterialTopTabNavigator
  initialRouteName="Pick"
  screenListeners={
    {
      "beforeRemove": [Function],
      "tabPress": [Function],
    }
  }
  screenOptions={
    {
      "swipeEnabled": false,
      "tabBarActiveTintColor": "#0071e9",
      "tabBarInactiveTintColor": "#616161",
      "tabBarItemStyle": {
        "borderColor": "#9e9e9e",
        "borderEndWidth": 0.5,
      },
    }
  }
>
  <Screen
    listeners={
      {
        "focus": [Function],
      }
    }
    name="QuickPick"
    options={
      {
        "tabBarBadge": undefined,
        "title": "[missing "en.PICKING.QUICKPICK" translation]",
      }
    }
  >
    [Function]
  </Screen>
  <Screen
    listeners={
      {
        "beforeRemove": [Function],
        "focus": [Function],
      }
    }
    name="Pick"
    options={
      {
        "tabBarBadge": [Function],
        "title": "[missing "en.PICKING.PICK" translation]",
      }
    }
  >
    [Function]
  </Screen>
  <Screen
    listeners={
      {
        "focus": [Function],
      }
    }
    name="SalesFloor"
    options={
      {
        "tabBarBadge": undefined,
        "title": "[missing "en.ITEM.SALES_FLOOR_QTY" translation]",
      }
    }
  >
    [Function]
  </Screen>
</MaterialTopTabNavigator>
`;

exports[`Picking Tab Navigator Renders the Pick TabNavigator with Active Picks and picking menu as true 1`] = `
<MaterialTopTabNavigator
  initialRouteName="Pick"
  screenListeners={
    {
      "beforeRemove": [Function],
      "tabPress": [Function],
    }
  }
  screenOptions={
    {
      "swipeEnabled": true,
      "tabBarActiveTintColor": "#0071e9",
      "tabBarInactiveTintColor": "#616161",
      "tabBarItemStyle": {
        "borderColor": "#9e9e9e",
        "borderEndWidth": 0.5,
      },
    }
  }
>
  <Screen
    listeners={
      {
        "focus": [Function],
      }
    }
    name="QuickPick"
    options={
      {
        "tabBarBadge": undefined,
        "title": "[missing "en.PICKING.QUICKPICK" translation]",
      }
    }
  >
    [Function]
  </Screen>
  <Screen
    listeners={
      {
        "beforeRemove": [Function],
        "focus": [Function],
      }
    }
    name="Pick"
    options={
      {
        "tabBarBadge": [Function],
        "title": "[missing "en.PICKING.PICK" translation]",
      }
    }
  >
    [Function]
  </Screen>
  <Screen
    listeners={
      {
        "focus": [Function],
      }
    }
    name="SalesFloor"
    options={
      {
        "tabBarBadge": undefined,
        "title": "[missing "en.ITEM.SALES_FLOOR_QTY" translation]",
      }
    }
  >
    [Function]
  </Screen>
</MaterialTopTabNavigator>
`;
